--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -14,8 +14,9 @@
         content="width=device-width,initial-scale=1,shrink-to-fit=no">
   {{ content_for_header }}
   <!-- Header hook for plugins -->
-  {{ 'application.css' | asset_url | stylesheet_tag }}
+  {{ 'style.css' | asset_url | stylesheet_tag }}
   {{ 'application.js' | asset_url | script_tag }}
+
 </head>
 
 <body>
