--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -1,5 +1,5 @@
-{% for product in collections.frontpage.products limit:4 %}
+<!-- {% for product in collections.frontpage.products limit:4 %}
 <div>
   Hello
 </div>
-{% endfor %}
+{% endfor %} -->
