Added nav login-reg

--- a/assets/custom.css
+++ b/assets/custom.css
@@ -11,6 +11,12 @@
  * %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
  */
 
-/* h2 {
-  color: red;
-} */
+.header-icons ul {
+  display: flex;
+}
+
+.header-icons ul>li>a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
