--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -1,4 +1,11 @@
-<div class="header">
+{% if section.settings.menuId.links == blank %}
+  {% assign main_menu_linklist = linklists[section.settings.menuId].links %}
+{%else%}
+  {% assign main_menu_linklist = section.settings.menuId.links %}
+{% endif %}
+
+
+<header class="header">
 
   <!-- Header Top Area -->
   <div class="header-toparea">
@@ -8,18 +15,20 @@
           <div class="header-topinfo">
             <ul>
               <li>Email us :
-                <a href="mailto://contact@example.com">contact@example.com</a>
+                <a href="#">contact@example.com</a>
               </li>
               <li>Call us :
-                <a href="tel://+1-800-915-6270">1-800-915-6270</a>
+                <a href="#">1-800-915-6270</a>
               </li>
+              <!-- Get the shop name -->
               <li>{{ shop.name }}</li>
             </ul>
           </div>
         </div>
         <div class="col-md-5 col-sm-6 col-12">
           <div class="header-topbutton">
-            <a class="tm-button tm-button-white" href="#">Book an Appointment</a>
+            <a class="tm-button tm-button-white"
+               href="#">Book an Appointment</a>
           </div>
         </div>
       </div>
@@ -30,55 +39,79 @@
   <div class="header-bottomarea">
     <div class="container">
       <div class="header-bottominner">
+
         <!-- Header Logo -->
         <div class="header-logo">
           <a href="/">
             {{ 'logo.png' | asset_url | img_tag: 'dialia-logo' }}
           </a>
         </div>
+
         <!-- Header Navigation -->
-        <nav class="tm-navigation">
+        <nav class="tm-navigation flex-grow-0">
           <ul>
-            {% for link in section.settings.menuId.links %}
-              {%if link.links != blank%}
-                <li class="tm-navigation-dropdown">
-                  <a href="{{link.url}}">
-                    {{ link.title }}
-                    {% render 'icon-dropdown' %}
-                  </a>
-                </li>
-              {%else%}
-                <li>
-                  <a href="{{link.url}}">
-                    {{ link.title }}
-                  </a>
-                </li>
-              {%endif%}
-              
+            {% for link in main_menu_linklist %}
+
+            <!--If the nav have submenu-->
+            {%if link.links != blank%}
+
+              {% assign link_handler = link.handle | replace: '-','_'%}
+              <li class="tm-navigation-dropdown"
+                  x-data="{ {{ link_handler }}: false }"
+                  @click.prevent="{{ link_handler }} = !{{ link_handler }}">
+                <a href="{{ link.url }}"
+                  class="flex justify-content-center">
+                  {{ link.title }}
+                  {% render 'icon-dropdown' %} <!--Reusable snippet.-->
+                </a>
+
+                <ul>
+                  {% for childLink in link.links %}
+                  <li>
+                    <a href="{{ childLink.url }}"> {{ childLink.title }}</a>
+                  </li>
+                  {% endfor %}
+                </ul>
+              </li>
+            {%else%} <!--If the nav doesn't have submenu-->
+              <li>
+                <a href="{{link.url}}"> {{ link.title }} </a>
+              </li>
+            {%endif%}
+
             {% endfor %}
           </ul>
         </nav>
-        <!-- Header Icons -->
-        <div class="header-icons">
-          <ul>
-            <li><a href="/cart">
-              {% render 'icon-shopping-bag' %}
-            </a></li>
-            <li><a class="header-searchtrigger" href="#">
-              {% render 'icon-search' %}  
-            </a></li>
 
+        <!-- Header Icons (cart, account) -->
+        <div class="header-icons">
+          <ul class="flex align-items-center gap-y-2.5">
+            <li class="cart">
+              <a href="/cart">{% render 'icon-shopping-bag' %}</a>
+            </li>
+            <li class="search">
+              <a class="header-searchtrigger"
+                 href="#">{% render 'icon-search' %}</a>
+            </li>
+
+            <!--Customer account-->
             {% if shop.customer_accounts_enabled %}
-              {% if customer %}
-                <a href="/account">
-                  {{ 'Log Out' | customer_logout_link }}
-              {% else %}
-                  Login 
-                </a>
-              {% endif %}
+
+              <li class="account">
+                {% if customer %}
+                  <!-- This means if a customer is now logged in -->
+                  <a href="/account"> Account </a>
+                  {{ 'Log Out' | customer_logout_link | replace: '<a', '<a' }}
+                {% else %}
+                    {{ 'Log In'| customer_login_link | replace: '<a', '<a' }}
+                    {{ 'Register'| customer_register_link | replace: '<a', '<a'}}
+                {% endif %}
+              </li>
+
             {% endif %}
           </ul>
         </div>
+
         <div class="header-searchbox">
           <div class="header-searchinner">
             <form action="#" class="header-searchform">
@@ -89,13 +122,17 @@
             </button>
           </div>
         </div>
+
       </div>
       <div class="header-mobilemenu clearfix">
         <div class="tm-mobilenav"></div>
       </div>
     </div>
   </div>
-</div>
+
+</header>
+
+
 {% schema %}
 {
   "name": "Header",
@@ -103,9 +140,9 @@
     {
     "type": "link_list",
     "id": "menuId",
-    "default": "main-menu",
+    "default": "main-menu", /* handler of the Main menu in navigation */
     "label": "Header Nav Menu"
     }
   ]
-  }
+}
 {% endschema %}
